2004-02-10 Jens Tkotz <jens@peino.de> 1.4.2-RC3-cvs-b2

	* Bugfix: When comments_anonymous = "no" not logged in users couldnt make comments.

2004-02-09 Jens Tkotz <jens@peino.de> 1.4.2-RC3-cvs-b1

	* Change: Remove some "new in 1.4.1".

2004-02-02  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.2-RC2

	* Updated copyright to 2000-2004.

	* v1.4.2 Release Candidate 2

2004-01-29 Jens Tkotz <jens@peino.de> 1.4.2-RC2-cvs-b6

	* "Bugfix": Added .adminform to css for no/standard skin.

2004-01-28 Jens Tkotz <jens@peino.de> 1.4.2-RC2-cvs-b5

	* Bugfix: In javascript in the 2nd parameter (name) 
		  in window.open are no spaces allowed.
		  NS doesnt care. IE does and result an error when trying to print via Fotokasten.

2004-01-28 Jens Tkotz <jens@peino.de> 1.4.2-RC2-cvs-b4

	* Bugfix: The Radiobutton for Shutterflys Donation is set always.
		  So its saved always as Service.
		  Fix is a workaround.

2004-01-28 Jens Tkotz <jens@peino.de> 1.4.2-RC2-cvs-b3

	* "Bugfix": - Added new css class .adminform. 
		    - Set textcolor corresponding in ALL skins.
		   This fixes the "bug" that text was not readable in admin options.

2004-01-27 Jens Tkotz <jens@peino.de> 1.4.2-RC2-cvs-b2

	* Bugfix: Fixed Bug introduced in 1.4.2-cvs-b11 (by me).
		  Changed doctype back to be more undetailed.
		  The detailed doctype caused the fitToWindow script not to work when 
		  using IE and Gallery was standalone.

2004-01-26 Jens Tkotz <jens@peino.de> 1.4.2-RC2-cvs-b1

	* Bugfix: Changing album permissions who can view comments were broken.

2004-01-25  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.2-RC1

	* v1.4.2 Release Candidate 1

2004-01-24  Bharat Mediratta  <bharat@menalto.com> 1.4.2-cvs-b79

        * Fixed remote security exploit in init.php and setup/init.php where 
	  one extract() call can be used to overwrite the input for a 
	  subsequent extract() call letting users overwrite GALLERY_BASEDIR
	
2004-01-21 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b78
	