@@ -40,7 +40,7 @@ if (!isset($gallery)) {
 	$gallery = new stdClass();
 }
 
-$gallery->version = '1.4.2-RC3-cvs-b2';
+$gallery->version = '1.4.2-RC3-cvs-b3';
 $gallery->config_version = 79;
 $gallery->album_version = 25;
 $gallery->user_version = 5;
