@@ -1,4 +1,8 @@
-2004-02-10 Jens Tkotz <jens@peino.de> 1.4.2-RC3-cvs-b2
+2004-02-11 Jens Tkotz <jens@peino.de> 1.4.2-RC3-cvs-b3
+
+	* Bugfix: Highlight Album was an option even if the subalbum has no photo.
+
+2004-02-11 Jens Tkotz <jens@peino.de> 1.4.2-RC3-cvs-b2
 
 	* Bugfix: When comments_anonymous = "no" not logged in users couldnt make comments.
 
